# method

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md
assets/image/: empire.tga
assets/image/brick_wall/: specular.tga
assets/image/commode/: diffuse.tga  specular.tga
assets/image/dev/: diffuse.tga  normal.tga
assets/image/moss_brick/: displacement.tga  specular.tga
assets/image/pavers/: ambient.tga  diffuse.tga  normal.tga  specular.tga
assets/image/wood_floor/: diffuse.tga  displacement.tga  specular.tga
assets/model/: README.md
assets/shader/: atmosphere.vert  blinn.frag  blinn.vert  normal.frag  normal.vert
assets/ui/fonts/: normal5x7.xcf  normal9x12.xcf
example/: CMakeLists.txt  Main.cpp
example/img/: README.md
example/img/brick_wall/: .gitattributes  diffuse.tga  normal.tga  specular.tga
example/img/ground/: ambient.tga  diffuse.tga  displacement.tga  normal.tga  specular.tga
example/img/moss_brick/: ambient.tga  diffuse.tga  normal.tga
example/img/pavers/: displacement.tga
example/img/test/: diffuse.tga  diffuse2.tga  normal.tga  specular.tga
example/img/wood_floor/: ambient.tga  diffuse.tga  displacement.tga  normal.tga  specular.tga
example/resource/: README.md
example/shader/: normal.frag  normal.vert  phong.frag  phong.vert
example/src/: ExampleEntity.cpp  ExampleMain.cpp  Main.cpp
include/: AABB.hpp  CMakeLists.txt  Camera.hpp  Common.hpp  Console.hpp  Controller.hpp  Defs.hpp  Entity.hpp  File.hpp  Framebuffer.hpp  GLDebugCallback.hpp  GLShader.hpp  GLTexture.hpp  GLVAO.hpp  Gui.hpp  Hotloader.hpp  Json.hpp  Light.hpp  MAngle.hpp  MComponent.hpp  MEntity.hpp  MGLDebugCallback.hpp  MGLRenderSystem.hpp  MGLShader.hpp  MGLVAO.hpp  MGLWindow.hpp  MMappedFile.hpp  MMatrix.hpp  MMeshData.hpp  MOBJLoader.hpp  MReadFile.hpp  MRenderSystem.hpp  MRenderTarget.hpp  MResourceLoader.hpp  MResourceManager.hpp  MScene.hpp  MShader.hpp  MVector.hpp  MappedFile.hpp  Material.hpp  (+27 more)
include/Component/: MCamera.hpp  MModel.hpp  MTransformation.hpp
include/Type/: MMat4.hpp  MQuat.hpp  MVec2.hpp  MVec3.hpp  MVec4.hpp  TAABB.hpp  TMat2.hpp  TMat3.hpp  TMat4.hpp  TQuat.hpp  TVec2.hpp  TVec3.hpp  TVec4.hpp
lib/: CMakeLists.txt
shader/: atmosphere.frag  atmosphere.geom  blinn.frag  blinn.vert  normal.frag  normal.vert
src/: Angle.cpp  BoundingBox.cpp  CMakeLists.txt  Camera.cpp  Console.cpp  Controller.cpp  Defs.cpp  Entity.cpp  File.cpp  Framebuffer.cpp  GLDebugCallback.cpp  GLShader.cpp  GLTexture.cpp  GLVAO.cpp  GlDebugCallback.cpp  Gui.cpp  Hotloader.cpp  Json.cpp  Light.cpp  MAngle.cpp  MEntity.cpp  MGLDebugCallback.cpp  MGLRenderSystem.cpp  MGLShader.cpp  MGLVAO.cpp  MGLWindow.cpp  MMappedFile.cpp  MMatrix.cpp  MMeshData.cpp  MOBJLoader.cpp  MReadFile.cpp  MRenderSystem.cpp  MRenderTarget.cpp  MResourceLoader.cpp  MScene.cpp  MShader.cpp  MVector.cpp  MappedFile.cpp  Material.cpp  Math.cpp  (+26 more)
src/Component/: MCamera.cpp  MModel.cpp  MTransformation.cpp
tools/: Builder.cpp  CMakeLists.txt
